optimisation: Add a cache for images. Reduce Elastic search thread number, and customize JVM parameters to limit class/thread memory growth.